force-app/main/default/objects/Sales_Rep__c/Sales_Rep__c.object-meta.xml
<CustomObject>
    <label>Sales Rep / Team</label>
    <nameField>
        <label>Sales Rep: Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep / Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>