force-app/main/default/objects/Sales_Rep__c/fields/Company_Name_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Rep / Team</relationshipLabel>
    <relationshipName>Sales_Rep_Team</relationshipName>
    <type>Lookup</type>
</CustomField>