force-app/main/default/objects/Sales_Rep__c/fields/Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Record_Type__c</fullName>
    <label>Default Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seawin USA Hospitality</fullName>
                <default>true</default>
                <label>Seawin USA Hospitality</label>
            </value>
            <value>
                <fullName>Seawin USA Online/Drop Shipment</fullName>
            </value>
            <value>
                <fullName>Seawin USA Wholesale Distribution</fullName>
            </value>
            <value>
                <fullName>Seawin China Hospitality</fullName>
            </value>
            <value>
                <fullName>Seawin China OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>