force-app/main/default/objects/Sales_Rep__c/fields/GL_Account_Variable_to_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_to_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipName>Sales_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>