force-app/main/default/objects/Sales_Rep__c/fields/InActive_Date__c.field-meta.xml
<CustomField>
    <fullName>InActive_Date__c</fullName>
    <label>InActive Date</label>
    <type>Date</type>
</CustomField>