force-app/main/default/objects/Sales_Rep__c/fields/IsTeam__c.field-meta.xml
<CustomField>
    <fullName>IsTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is just a sales rep or a sales rep / team?</inlineHelpText>
    <label>Team</label>
    <type>Checkbox</type>
</CustomField>