force-app/main/default/objects/Sales_Rep__c/fields/Man_Rep_Price_Level_1_12__c.field-meta.xml
<CustomField>
    <fullName>Man_Rep_Price_Level_1_12__c</fullName>
    <label>Man. Rep Price Level 1 - 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>