force-app/main/default/objects/Sales_Rep__c/fields/Monthly_Quota__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota__c</fullName>
    <inlineHelpText>Expected monthly sales</inlineHelpText>
    <label>Monthly Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>