force-app/main/default/objects/Sales_Rep__c/fields/Outside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_Rep__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sales rep is outside</description>
    <label>Outside Sales Rep</label>
    <type>Checkbox</type>
</CustomField>