force-app/main/default/objects/Sales_Rep__c/fields/Owner_Custom__c.field-meta.xml
<CustomField>
    <fullName>Owner_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Custom</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesRepOwnerCustom</relationshipName>
    <type>Lookup</type>
</CustomField>