force-app/main/default/objects/Sales_Rep__c/fields/Price_Level_13_20__c.field-meta.xml
<CustomField>
    <fullName>Price_Level_13_20__c</fullName>
    <label>Price Level 13 - 20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>