force-app/main/default/objects/Sales_Rep__c/fields/Price_Level_1_12__c.field-meta.xml
<CustomField>
    <fullName>Price_Level_1_12__c</fullName>
    <label>Price Level 1 - 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>