force-app/main/default/objects/Sales_Rep__c/fields/Quote_Barn_Doors__c.field-meta.xml
<CustomField>
    <fullName>Quote_Barn_Doors__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote barn door line?</description>
    <inlineHelpText>Do we quote barn doors?</inlineHelpText>
    <label>Barn Doors</label>
    <type>Checkbox</type>
</CustomField>