force-app/main/default/objects/Sales_Rep__c/fields/Quote_LED_Mirrors__c.field-meta.xml
<CustomField>
    <fullName>Quote_LED_Mirrors__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote LED mirror line?</description>
    <inlineHelpText>Do we quote LED mirrors?</inlineHelpText>
    <label>LED Mirrors</label>
    <type>Checkbox</type>
</CustomField>