force-app/main/default/objects/Sales_Rep__c/fields/Quote_Shower_Bases__c.field-meta.xml
<CustomField>
    <fullName>Quote_Shower_Bases__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote shower bases line?</description>
    <inlineHelpText>Do we quote shower bases?</inlineHelpText>
    <label>Shower Bases</label>
    <type>Checkbox</type>
</CustomField>