force-app/main/default/objects/Sales_Rep__c/fields/Quote_Shower_Doors__c.field-meta.xml
<CustomField>
    <fullName>Quote_Shower_Doors__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote shower door line?</description>
    <inlineHelpText>Do we quote shower door line?</inlineHelpText>
    <label>Shower Doors</label>
    <type>Checkbox</type>
</CustomField>