force-app/main/default/objects/Sales_Rep__c/fields/Quote_Vanities_Kitchens__c.field-meta.xml
<CustomField>
    <fullName>Quote_Vanities_Kitchens__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote vanities and kitchens line?</description>
    <inlineHelpText>DO we quote vanities and kitchens?</inlineHelpText>
    <label>Vanities &amp; Kitchens</label>
    <type>Checkbox</type>
</CustomField>