force-app/main/default/objects/Sales_Rep__c/fields/Quote_Wall_Surrounds__c.field-meta.xml
<CustomField>
    <fullName>Quote_Wall_Surrounds__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mostly for outside sales reps, do need to quote wall surrounds line?</description>
    <inlineHelpText>Do we quote wall surrounds?</inlineHelpText>
    <label>Wall Surrounds</label>
    <type>Checkbox</type>
</CustomField>