force-app/main/default/objects/Sales_Rep__c/fields/Receive_Commission__c.field-meta.xml
<CustomField>
    <fullName>Receive_Commission__c</fullName>
    <label>Receive Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After each payment</fullName>
                <default>true</default>
                <label>After each payment</label>
            </value>
            <value>
                <fullName>When Sales Order is fully paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>