force-app/main/default/objects/Sales_Rep__c/fields/Sales_Rep_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Being used in SalesRepPageTeamDeselectionPage.</description>
    <label>Sales Rep Shadow</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Rep__c.Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Sales Rep / Team</relationshipLabel>
    <relationshipName>Sales_Rep2</relationshipName>
    <type>Lookup</type>
</CustomField>