force-app/main/default/objects/Sales_Rep__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Visible To</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>