force-app/main/default/objects/Sales_Rep__c/listViews/Active_USA.listView-meta.xml
<ListView>
    <fullName>Active_USA</fullName>
    <columns>NAME</columns>
    <columns>Company_Name_Lookup__c</columns>
    <columns>Active__c</columns>
    <columns>Monthly_Quota__c</columns>
    <columns>Price_Level_1_12__c</columns>
    <columns>Price_Level_13_20__c</columns>
    <columns>Price_Level_21_26__c</columns>
    <columns>Default_Record_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Default_Record_Type__c</field>
        <operation>contains</operation>
        <value>Seawin USA</value>
    </filters>
    <label>Active USA</label>
</ListView>