force-app/main/default/objects/Sales_Rep__c/listViews/All_Sales_Rep.listView-meta.xml
<ListView>
    <fullName>All_Sales_Rep</fullName>
    <columns>NAME</columns>
    <columns>Company_Name_Lookup__c</columns>
    <columns>Email__c</columns>
    <columns>Monthly_Quota__c</columns>
    <columns>Outside_Sales_Rep__c</columns>
    <columns>Active__c</columns>
    <columns>Default_Record_Type__c</columns>
    <columns>Price_Level_1_12__c</columns>
    <columns>Price_Level_13_20__c</columns>
    <columns>Price_Level_21_26__c</columns>
    <columns>Price_Level_27_30__c</columns>
    <columns>IsTeam__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Rep</label>
</ListView>